--- a/vignettes/RequireApproach.Rmd
+++ b/vignettes/RequireApproach.Rmd
@@ -104,16 +104,30 @@ try(pak::pkg_install(c("fastdigest")))
 
 ### Dependency conflict
 
-When doing code development, it is common to use many `GitHub` packages. Each of these (or their dependencies) may point to one or more branches, either directly by user or in `Remotes` field. In this next example, `pak` errors, while `Require` makes decisions and installs. This is a common occurrence for teams developing packages concurrently.
+When doing code development, it is common to use many `GitHub` packages. Each of these (or their dependencies) may point to one or more branches, either directly by user or in `Remotes` field. In this next example, `pak` errors, while `Require` makes decisions and installs. This is a common occurrence for teams developing packages concurrently. The `pak` approach suggests prepending `any::` to the package(s) that is/are causing the conflict. This may suffice under some situations. The `Require` approach is to assume the equivalent of `any::` which means to prioritize base on (in this order) 1. use package version requirements, 2. CRAN-like repositories, 3. order.
 
 ```{r, eval=FALSE,message=TRUE}
-
-# Fails because of a) packages taken off CRAN & multiple GitHub branches requested
-try(pk <- pak::pkg_deps("PredictiveEcology/LandR@LandWeb"))
+library(Require)
+# Fails because of a) packages taken off CRAN & multiple GitHub branches requested within the nested dependencies
+pkgs <- c("reproducible", "PredictiveEcology/SpaDES@development")
+dirTmp <- tempdir2(sub = "first")
+.libPaths(dirTmp)
+install.packages("pak") # need this in the library; can't use personal library version
+try(pak::pkg_install(pkgs))
+# ✔ Loading metadata database ... done
+# Error : ! error in pak subprocess                                                      
+# Caused by error: 
+# ! Could not solve package dependencies:
+# * reproducible: dependency conflict
+# * PredictiveEcology/SpaDES@development: Can't install dependency PredictiveEcology/reproducible@development (>=  2.0.10)
+# * PredictiveEcology/reproducible@development: Conflicts with reproducible
+pkgsAny <- c("any::reproducible", "PredictiveEcology/SpaDES@development")
+try(pak::pkg_install(pkgsAny))
 
 # Fine
-rq <- Require::pkgDep("PredictiveEcology/LandR@LandWeb")
-
+dirTmp <- tempdir2(sub = "second")
+.libPaths(dirTmp)
+Require::Install(pkgs)
 ```
 
 ```{r, eval=FALSE,message=TRUE}
